# MMP-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
CMake/: msvc.cmake  poco_config.cmake  sample_ini.cmake  spriv_cross.cmake  utility.cmake  vma.cmake
CMake/LodePng/: CMakeLists.txt
CMake/MediaServer/: CMakeLists.txt
CMake/eigen/: eigen.cmake
CMake/openH264/: CMakeLists.txt
CMake/openh264/: openh264.cmake
Codec/: AbstractDecorder.h  AbstractEncoder.h  CMakeLists.txt  CodecCommon.cpp  CodecCommon.h  CodecConfig.cpp  CodecConfig.h  CodecFactory.cpp  CodecFactory.h  StreamFrame.cpp  StreamFrame.h
Codec/.github/workflows/: ci.yml
Codec/PNG/: PNGCommon.h  PNGDecorder.cpp  PNGDecorder.h  PNGEncoder.cpp  PNGEncoder.h  PNGUtil.cpp  PNGUtil.h
Codec/Rockchip/: RKCommon.cpp  RKCommon.h  RKDecoder.cpp  RKDecoder.h  RKH264Decoder.cpp  RKH264Decoder.h  RKTranslator.cpp  RKTranslator.h  RKUtil.cpp  RKUtil.h  RkBufferContext.cpp  RkBufferContext.h  RkBufferPoolContext.cpp  RkBufferPoolContext.h
Codec/VAAPI/: VACommon.cpp  VACommon.h  VADecodePictureContext.cpp  VADecodePictureContext.h  VADecoder.cpp  VADecoder.h  VADecoderContext.cpp  VADecoderContext.h  VADevice.cpp  VADevice.h  VAH264Decoder.cpp  VAH264Decoder.h  VASurfaceAllocateMethod.cpp  VASurfaceAllocateMethod.h  VATranslator.cpp  VATranslator.h  VAUtil.cpp  VAUtil.h  VaH264SliceDecodingProcess.cpp  VaH264SliceDecodingProcess.h
Codec/openh264/: OpenH264Common.cpp  OpenH264Common.h  OpenH264Decoder.cpp  OpenH264Decoder.h  OpenH264Util.cpp  OpenH264Util.h
Common/: AbstractAllocateMethod.cpp  AbstractAllocateMethod.h  AbstractDeviceAllocateMethod.cpp  AbstractDeviceAllocateMethod.h  AbstractFrame.cpp  AbstractFrame.h  AbstractLogger.cpp  AbstractLogger.h  AbstractPack.cpp  AbstractPack.h  AbstractPicture.cpp  AbstractPicture.h  AbstractSharedData.cpp  AbstractSharedData.h  AbstractSharedDataPool.h  AllocateMethodFactory.cpp  AllocateMethodFactory.h  Any.h  CMakeLists.txt  Common.cpp  Common.cpp.in  Common.h  CommonGeometry.cpp  CommonGeometry.h  DrmAllocateMethod.cpp  DrmAllocateMethod.h  DynamicFactory.h  EventDispatcher.cpp  EventDispatcher.h  EventMessage.cpp  EventMessage.h  EventTag.cpp  EventTag.h  FuncTask.cpp  FuncTask.h  ImmutableVectorAllocateMethod.h  Instantiator.h  LogMessage.cpp  LogMessage.h  MediaType.cpp  (+39 more)
Config/: AbstractConfig.cpp  AbstractConfig.h  CMakeLists.txt  mmp.ini
GPU/: CMakeLists.txt
GPU/GL/: CMakeLists.txt  GLCommon.cpp  GLCommon.h  GLContex.cpp  GLContex.h  GLContexDesc.cpp  GLContexDesc.h  GLDrawContex.cpp  GLDrawContex.h
GPU/GL/D3D11/: D3D11Common.cpp  D3D11Common.h  D3D11Contex.cpp  D3D11Contex.h  D3D11DrawContex.cpp  D3D11DrawContex.h  D3D11Translator.cpp  D3D11Translator.h
GPU/GL/OpenGL/: OpenGL.cpp  OpenGL.h  OpenGLCommon.cpp  OpenGLCommon.h  OpenGLContex.cpp  OpenGLContex.h  OpenGLDrawContex.cpp  OpenGLDrawContex.h  OpenGLFeature.cpp  OpenGLFeature.h  OpenGLFrameBuffer.cpp  OpenGLInitStep.cpp  OpenGLInitStepData.h  OpenGLRenderContex.cpp  OpenGLRenderContex.h  OpenGLRenderData.h  OpenGLRenderStep.cpp  OpenGLStepData.h  OpenGLTranslator.cpp  OpenGLTranslator.h  OpenGLUtil.cpp  OpenGLUtil.h
GPU/GL/Vulkan/: VulkanBarrier.cpp  VulkanBarrier.h  VulkanCommon.cpp  VulkanCommon.h  VulkanContex.cpp  VulkanContex.h  VulkanDrawContex.cpp  VulkanDrawContex.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanImpl.cpp  VulkanImpl.h  VulkanInterface.cpp  VulkanInterface.h  VulkanRenderContex.cpp  VulkanRenderContex.h  VulkanRenderData.cpp  VulkanRenderData.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanStepData.cpp  VulkanStepData.h  VulkanTranslator.cpp  VulkanTranslator.h  VulkanUtil.cpp  VulkanUtil.h
GPU/PG/: AbstractSceneCompositor.cpp  AbstractSceneCompositor.h  AbstractSceneItem.cpp  AbstractSceneItem.h  AbstractSceneLayer.cpp  AbstractSceneLayer.h  CMakeLists.txt  SceneCommon.cpp  SceneCommon.h
GPU/PG/Scene/: SceneCompositorImpl.cpp  SceneCompositorImpl.h  SceneItemImpl.cpp  SceneItemImpl.h  SceneLayerImpl.cpp  SceneLayerImpl.h
GPU/PG/Utility/: CommonUtility.cpp  CommonUtility.h
GPU/SL/: AbstractSLConverter.h  AbstractSLFactory.h  CMakeLists.txt  SLCommon.cpp  SLCommon.h
GPU/Windows/: AbstractWindows.cpp  AbstractWindows.h  CMakeLists.txt  WindowFactory.cpp  WindowFactory.h  WindowUtils.cpp  WindowUtils.h  WindowsCommon.cpp  WindowsCommon.h
GPU/Windows/DXGI/: DXGICommon.cpp  DXGICommon.h  DXGIWindow.cpp  DXGIWindow.h
GPU/Windows/EGL/: AbstractEGLWindow.cpp  AbstractEGLWindow.h  EGLCommon.cpp  EGLCommon.h  EGLWindow.cpp  EGLWindow.h  EGLWindowDefault.cpp  EGLWindowDefault.h  EGLWindowGBM.cpp  EGLWindowGBM.h
GPU/Windows/SDL/: SDLWindow.cpp  SDLWindow.h
GPU/Windows/Utils/: WindowUtilsWin32.cpp  WindowUtilsWin32.h
GPU/Windows/Vulkan/: VulkanInterfaceImpl.cpp  VulkanInterfaceImpl.h  VulkanWindow.cpp  VulkanWindow.h  VulkanWindowsCommon.cpp  VulkanWindowsCommon.h
GPU/Windows/X11/: X11Window.cpp  X11Window.h
LICENSES/: Eigen_LICSENSE  LIBVA_LICSENSE
RPC/: AbstractRPC.cpp  AbstractRPC.h  AbstractRPCDispatcher.cpp  AbstractRPCDispatcher.h  AbstractRPCProcess.cpp  AbstractRPCProcess.h  AbstractRPCRequest.cpp  AbstractRPCRequest.h  AbstractRPCResponse.cpp  AbstractRPCResponse.h  CMakeLists.txt  RPCCommon.cpp  RPCCommon.h  RPCFactory.cpp  RPCFactory.h  RPCProxy.cpp  RPCProxy.h  RPCUTils.cpp  RPCUTils.h
RPC/HTTP/: HTTPRPC.cpp  HTTPRPC.h
